@@ -1,3 +1,7 @@
+31-05-2005 <Qball> <Qball@qballcow.nl>
+	* src/playlist3.c:		possibly Fixed bug in artist browser that
+	caused artist "Eric Clapton" and album "Eric Clapton" didnt work.
+
 28-05-2005 <Qball> <Qball@qballcow.nl>
 	* glade/gmpc.glade:		Re-enabled key-bindings.
 
